# meshirc

./: .gitignore  README.md  pyproject.toml
meshirc/: __init__.py  __main__.py  archive.py  banner.py  cli.py  clipboard.py  config.py  devices.py
meshirc/core/: commands.py  models.py  router.py
meshirc/transport/: base.py  common.py  events.py  serial.py  tcp.py
meshirc/ui/: app.py  styles.tcss
meshirc/ui/widgets/: buffer_list.py  buffer_view.py  input_line.py  status_bar.py
tests/: test_archive.py  test_clipboard.py  test_commands.py  test_config.py  test_models.py  test_router.py  test_smoke.py  test_ui_app.py
tests/fixtures/: sample_packets.py
