[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meshirc"
version = "0.1.0"
description = "Profanity-style TUI client for Meshtastic"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "meshtastic>=2.5",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
meshirc = "meshirc.cli:main"

[tool.setuptools.packages.find]
include = ["meshirc*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
